--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>
                     <button class="about-me" type="button"><a href="#"><span>About me</span>🙋‍♂️</a></button>
                     <ul class="submenu">
-                        <li><a href="#"><span>Comming soon</span>🚧</a></li>
+                        <li><a href="https://github.com/Joe-Ngan"><span>Github</span>💻</a></li>
                     </ul>
                 </li>
                 <li>
